Setup Simple Stripe Api Service

--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "dev": "nodemon -r esm ./src"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "pg": "^8.3.3",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.5",
-    "stripe": "^8.96.0"
+    "stripe": "^8.114.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.0",
